--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 .App {
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #c527f8;
+  padding: 20px 0px;
+  font-family: 'Oswald', sans-serif;
+  
+ 
+}
+.container{
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  margin: auto;
+  
+ 
+}
+.user-list{
+  grid-column: 1 / 3;
+  grid-row: 1;
+  width: 95%;
+}
+.user-list .list{
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px auto;
+  padding: 0px 40px ;
+}
+.user-list button{
+  margin: 7px;
+}
+.user-list h2 {
+  text-transform: capitalize;
+  font-size: 17px;
+
+}
+.user-list button{
+  background-color: transparent;
+  border: none;
+}
+
+.user-list button i{
+  font-size: 18px;
+
+}
+.user-list button .remove{
+  color: red;
+}
+.user-list button .edit{
+  color: darkslategray;
+}
+.item_list p i{
+  margin-right: 5px;
+}
+.item_list h4{
+  font-weight: 300;
+}
+.user-form{
+  width: 90%;
+ 
+  margin: 10px auto;
+}
+.user-form h2{
+  text-align: center;
+}
+.user-form form {
+  width: 100%;
+  text-align: center;
+  margin: 0px 0px;
+  background-color: #fff;
+  padding: 10px ;
+  border-radius: 20px;
+  
+}
+.form-control{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.form-control input{
+  padding: 10px 5px;
+  margin: 5px 0px;
+  border: none;
+  border-radius: 5px;
+  background-color:#f7f7f7;
+  
+}
+input:focus{
+  border: solid 1px #5fbab1;
+  box-shadow: 2px 2px 2px #5fbab1 ;
+  outline: 0 none;
+}
+.form-control input::placeholder{
+  font-size: 14px;
+  font-family: 'Oswald', sans-serif;
+}
+input[type="date"]::placeholder{
+  font-family: 'Oswald', sans-serif;
+  appearance: none;
+}
+
+form button{
+   display: block;
+   width: 100%;
+  border: none;
+  background-color: #5fbab1;
+  padding: 10px 30px;
+  color:#fff;
+  font-size: 16px;
+  margin: 10px auto;
+  border-radius: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-40{
+  width: 41%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-100{
+  width: 86%;
 }
